--- a/plan.org
+++ b/plan.org
@@ -4,26 +4,25 @@
 
 /* ---------------- controls to implement ---------------- */
 
-* TODO button
-* TODO checkboxes
-* TODO radiobuttons
-* TODO static text
-* TODO static box
-* TODO text control
-* TODO combobox (choice)
-* TODO scrolledwindow
-* TODO sliders
-* TODO progress bar7
-* TODO panels
-* TODO frame top bar
-* TODO menubar
-* TODO static lines
+** DONE button
+** TODO checkboxes
+** TODO radiobuttons
+** TODO static text
+** TODO static box
+** TODO text control
+** TODO combobox (choice)
+** TODO scrolledwindow
+** TODO sliders
+** TODO progress bar7
+** TODO panels
+** TODO frame top bar
+** TODO menubar
+** TODO static lines
 
 /* ------------------------ notes ------------------------ */
 
 - create reusable dropdown popup to use in menubar and combobox
-- add act-on-press option? (disgusting)
-
+- replace drawing area and propagate hover event to background?
   
 /* --------------- customizable attributes --------------- */
 
