--- a/README.org
+++ b/README.org
@@ -54,7 +54,7 @@ All of the controls have initial customization values that can be
 overriden by either:
 
 1. Initializing a Config object (or dict) first and then passing it to
-   the control through its src_python{config} argument (recommended)
+   the control through its 'config' argument (recommended)
 2. Passing the customization attributes directly as arguments when
    initializing the control
 
@@ -73,7 +73,7 @@ button_config = Config(button_backgroundcolour_hover=(255, 255, 255))
 #+END_SRC
 
 doing this would overwrite only the button's background colour for its
-hover state, leaving the rest of the values unaltered.
+hover state, leaving the rest of the initial values unaltered.
 
 Another benefit of doing this is that you can reuse the same config
 variable with other buttons:
@@ -120,8 +120,8 @@ color (or any other attribute) you first need to decide the state for
 which the color will be applied to, and then modify it by accessing
 the config object of the control.
 
-For example, to change the background colour of the button when in
-/hover/ mode, you first need to call the GetConfig method of the
+For example, to change the background colour of the button when in hover
+mode, you first need to call the GetConfig method of the
 button object, which will give you a reference to the customization
 attributes in DICTIONARY form. You can then modify the attribute using
 this reference.
